@@ -1,3 +1,9 @@
+s25rttr (20110412-7137.12) hardy jaunty karmic lucid maverick natty; urgency=low
+
+  * Automatic Jenkins Build 12
+
+ -- Return To The Roots Team <sf-team@siedler25.org>  Tue, 12 Apr 2011 18:28:53 +0200
+
 s25rttr (20110412-7135.10) any; urgency=low
 
   * Automatic Jenkins Build 10
